# limitless

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  env.template  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py
apps/users/: admin.py  api.py  constants.py  managers.py  models.py  serializers.py  views.py
apps/users/management/commands/: generate_profiles.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: profile.html
docker/: backend.dockerfile
docs/: generate.sh  template.html
frontend/: README.md  package-lock.json  package.json  prettier.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: limitless_profile.ts  router.ts
frontend/src/api/: base.ts  profile.ts
frontend/src/apps/: LimitlessProfile.vue
frontend/src/components/: ProfileCreateModal.vue  ProfileEntry.vue
frontend/src/interfaces/: models.ts
frontend/src/stores/: profile.ts
frontend/src/views/: NotFoundView.vue  ProfileDetailsView.vue  ProfileListView.vue
limitless/: abstract_models.py  admin.py  api_urls.py  asgi.py  formatters.py  settings.py  urls.py  utils.py  wsgi.py
